# baremetal-embedded

gpio_bindings_1/: .cproject  .project  STM32F303RETX_FLASH.ld  gpio_bindings_1 Debug.launch
gpio_bindings_1/Debug/: gpio_bindings_1.elf  gpio_bindings_1.list  gpio_bindings_1.map  makefile
gpio_bindings_1/Debug/Src/: main.d  subdir.mk
gpio_bindings_1/Src/: main.c
led_toggle_0/led_toggle_c_0/: .cproject  .project  led_toggle_c_0 Debug.launch
led_toggle_0/led_toggle_c_0/Debug/: led_toggle_c_0.elf  led_toggle_c_0.list  led_toggle_c_0.map  makefile
led_toggle_0/led_toggle_c_0/Debug/Src/: subdir.mk
led_toggle_0/led_toggle_c_0/Src/: main.c
led_toggle_0/led_toggle_rust_0/: Cargo.toml
led_toggle_0/led_toggle_rust_0/src/: main.rs
