[package]
name = "led_toggle_rust_0"
version = "0.1.0"
authors = ["d33p <padaladeepesh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
stm32f3-discovery = "0.7.0"
panic-itm = "0.4.2"
